Fix mime type sniffing from extension. Comment out css rule killing parsing on firefox (not sure why it does) Set cache headers on resources. Add build time resource string on build.

--- a/CacheManager/TacklR.CacheManager/Content/cachemanager.less
+++ b/CacheManager/TacklR.CacheManager/Content/cachemanager.less
@@ -6,7 +6,7 @@
 //TODO: Add copyright
 /*!
  * Copyright 2014 Tacklr
- */
+ **/
 
 html {
     position: relative;
@@ -101,7 +101,7 @@ body {
         text-rendering: auto;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
-        content: "\f1ce";
+        content: '\f1ce';
         -webkit-animation: fa-spin 2s infinite linear;
         animation: fa-spin 2s infinite linear;
     }
@@ -145,7 +145,7 @@ body {
         text-rendering: auto;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
-        content: "\f021";
+        content: '\f021';
         -webkit-animation: fa-spin 2s infinite linear;
         animation: fa-spin 2s infinite linear;
     }
@@ -246,7 +246,7 @@ body {
 
     a::before,
     a::after {
-        content: "";
+        content: '';
         width: 100%;
         display: block;
         position: absolute;
