--- a/CacheManager/TacklR.CacheManager/Content/css-treeview.less
+++ b/CacheManager/TacklR.CacheManager/Content/css-treeview.less
@@ -138,7 +138,8 @@
 }
 
 /* webkit adjacent element selector bugfix */
-@media screen and (-webkit-min-device-pixel-ratio:0)
+//This kills firefox for some reason
+/*@media screen and (-webkit-min-device-pixel-ratio:0)
 {
     .css-treeview 
     {
@@ -156,4 +157,4 @@
             padding: 0;
         }
     }
-}
+}*/
